--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-linkdin"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/EarlToucan" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -60,7 +60,7 @@
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="s/pic01.jpgimage" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Read more</a></li>
 								</ul>
